updated at student dashboard commented samadhaan ai and leveller

--- a/templates/student/base.html
+++ b/templates/student/base.html
@@ -472,22 +472,22 @@
                             </a>
                         </li>
 
-                        <li class="sidebar-item">
+                        <!-- <li class="sidebar-item">
                             <a class="sidebar-link" href="{% url 'ask_doubt' %}" aria-expanded="false">
                                 <span>
                                     <i class="ti ti-help"></i>
                                 </span>
                                 <span class="hide-menu">Samadhaan AI🧠</span>
                             </a>
-                        </li>
+                        </li> -->
 
 
                         <!-- ========================== PRACTICE ================================== -->
 
-                        <li class="nav-small-cap">
+                        <!-- <li class="nav-small-cap">
                             <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
                             <span class="hide-menu">PRACTICE</span>
-                        </li>
+                        </li> -->
 
 
                         <!-- <li class="sidebar-item" >
@@ -499,7 +499,7 @@
                                 <span class="hide-menu text-white">Angaari Sheets🔥</span>
                             </a>
                         </li> -->
-                        <li class="sidebar-item">
+                        <!-- <li class="sidebar-item">
                             <a class="sidebar-link {% block leveller_active %} {% endblock %}"
                                 href="{% url 'leveller' %}" aria-expanded="false">
                                 <span>
@@ -507,7 +507,7 @@
                                 </span>
                                 <span class="hide-menu">Leveller🔥🔥</span>
                             </a>
-                        </li>
+                        </li> -->
 
 
 
