google auth test 3 all good

--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -157,9 +157,9 @@
 
         <button type="submit" class="submit-btn" id="signup-button" disabled>Register</button>
 
-        <div class="divider">
+        <!-- <div class="divider">
           <span>OR</span>
-        </div>
+        </div> -->
 
 
 
