made some UI changes

--- a/demo_static/css/accounts/register.css
+++ b/demo_static/css/accounts/register.css
@@ -132,6 +132,14 @@ body {
     backdrop-filter: blur(10px);
 }
 
+/* add responsive style to .register-card */
+@media (max-width: 768px) {
+    .register-card {
+        margin-top: 0%;
+    }
+
+}
+
 .card-title {
     font-family: 'Montserrat', sans-serif;
     color: var(--accent2);
