--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -57,6 +57,10 @@
       </a>
 
 
+      <div class="divider">
+        <span>OR</span>
+      </div>
+
       <!-- Django Messages -->
       {% if messages %}
       <div class="messages-container">
