--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -62,6 +62,10 @@
         Sign up with Google
       </a>
 
+      <div class="divider">
+          <span>OR</span>
+        </div>
+
       <!-- Django Messages -->
       {% if messages %}
       <div class="messages-container">
@@ -156,12 +160,6 @@
         </div>
 
         <button type="submit" class="submit-btn" id="signup-button" disabled>Register</button>
-
-        <!-- <div class="divider">
-          <span>OR</span>
-        </div> -->
-
-
 
         <div class="login-link">
           Already an <span class="angaari-highlight"
