added the flae page

--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -178,10 +178,16 @@
                     <!-- <li class="nav-item">
                         <a class="nav-link article-link" href="{% url 'articles' %}">Job Articles</a>
                     </li> -->
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" style="color: rgb(253, 135, 0);"
                             href="{% url 'flames' %}">FLAMES '25🔥</a>
+                    </li> -->
+
+                    <li class="nav-item">
+                        <a class="nav-link" style="color: rgb(253, 135, 0);"
+                            href="{% url 'flare_home' %}">FLARE 1.0🔥</a>
                     </li>
+
                     <!--  <li class="nav-item">
                         <a class="nav-link" href="#">Contact</a>
                     </li> -->
