--- a/templates/home/flames.html
+++ b/templates/home/flames.html
@@ -166,10 +166,12 @@ FLAMES '25 | The Angaar Batch
                         </div>
                     </div>
                 </div>
-                
+
                 <div class="feedback-card">
                     <div class="feedback-content">
-                        The Summer training program was truly helpful and I have gained good knowledge about the data analysis and visualization. The faculty was so supportive and also encouraged me at every step of my journey.
+                        The Summer training program was truly helpful and I have gained good knowledge about the data
+                        analysis and visualization. The faculty was so supportive and also encouraged me at every step
+                        of my journey.
                     </div>
                     <div class="feedback-author">
                         <div class="feedback-avatar">RG</div>
