--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -185,7 +185,7 @@
 
                     <li class="nav-item">
                         <a class="nav-link" style="color: rgb(253, 135, 0);"
-                            href="{% url 'flare_home' %}">FLARE 1.0🔥</a>
+                            href="{% url 'flare' %}">FLARE 1.0🔥</a>
                     </li>
 
                     <!--  <li class="nav-item">
