--- a/templates/home/flare.html
+++ b/templates/home/flare.html
@@ -822,7 +822,7 @@ FLARE 1.0 | Launch Your Tech Career
                         <li>Capstone Project Portfolio</li>
                     </ul>
 
-                    <a href="https://rzp.io/rzp/tab-flare1-0-jdsa" target="_blank" class="register-btn">
+                    <a href="{% url 'flare_registration' %}" target="_blank" class="register-btn">
                         Register Now <i class="fas fa-arrow-right"></i>
                     </a>
                     <button class="path-btn" onclick="openCurriculumModal('java')">
