--- a/templates/home/flare.html
+++ b/templates/home/flare.html
@@ -851,7 +851,7 @@ FLARE 1.0 | Launch Your Tech Career
                         <li>ChatGPT & LLM API Integration</li>
                         <li>WebApp Deployment & DevOps Basics</li>
                     </ul>
-                    <a href="https://rzp.io/rzp/tab-flare1-0-fsgai" target="_blank" class="register-btn">
+                    <a href="{% url 'flare_registration' %}" target="_blank" class="register-btn">
                         Register Now <i class="fas fa-arrow-right"></i>
                     </a>
                     <button class="path-btn" onclick="openCurriculumModal('fullstack')">
@@ -863,7 +863,7 @@ FLARE 1.0 | Launch Your Tech Career
 
         <!-- Combo Offer Section -->
         <div class="combo-section" data-aos="zoom-in" data-aos-duration="800">
-            <a href="https://rzp.io/rzp/tab-flare1-0-combo" target="_blank" class="combo-btn">
+            <a href="{% url 'flare_registration' %}" target="_blank" class="combo-btn">
                 <span class="combo-text">
                     Complete Tech Mastery - COMBO PACK
                     <span class="combo-discount">Become a DSA and Full-Stack Problem Solver</span>
